add Allure steps